fix: remove unused endpoint
