# docs/swagger.yaml
@@ -283,54 +283,6 @@ paths:
       summary: Health check endpoint
       tags:
       - Health
-  /transaction:
-    post:
-      consumes:
-      - application/json
-      description: Create a new transaction in the subledger
-      parameters:
-      - description: Transaction request
-        in: body
-        name: request
-        required: true
-        schema:
-          properties:
-            description:
-              type: string
-            entries:
-              type: array
-            reference_id:
-              type: string
-          type: object
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            properties:
-              status:
-                type: string
-              transaction_id:
-                type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            properties:
-              error:
-                type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            properties:
-              error:
-                type: string
-            type: object
-      summary: Create transaction
-      tags:
-      - Subledger
   /transfers:
     post:
       consumes:
